Change result type to accept multiple batches
Signed-off-by: Arpit Bandejiya <abandeji@amazon.com>